<resources>
    <!--                  STRING                  -->
    <string name="app_name">SCM</string>
    <string name="app_name_debug">SCM Debug</string>
    <string name="str_hs1">향설 1관</string>
    <string name="str_staff">교직원 식당</string>
    <string name="str_hs2">향설 2관</string>
    <string name="str_student_union">학생회관</string>
    <string name="str_app_inquiry"><u>앱 문의 하기</u></string>
    <string name="str_master">MASTER</string>
    <string name="str_total_admin">총 관리자</string>


    <!--                  Label: home                  -->
    <string name="str_choose_cafeteria">원하는 식당을 선택하세요!</string>
    <string name="str_today_menu">오늘의 학식</string>


    <!--                  Label: detail                  -->
    <string name="str_operating_hours">운영 시간</string>
    <string name="str_login_admin"><u>관리자로 로그인</u></string>
    <string name="str_notice">배식 마감은 운영 시간 30분 전입니다.</string>
    <string name="str_location">위치</string>
    <string name="edit_location"><u>위치 보기</u></string>
    <string name="str_price">가격</string>


    <!--                  Edit: detail                  -->
    <string name="edit_operating_hours_student_union">08:00 ~ 19:00</string>
    <string name="edit_operating_hours_hs2">08:00 ~ 19:00</string>
    <string name="edit_operating_hours_hs1">08:00 ~ 19:00</string>
    <string name="edit_operating_hours_staff">08:00 ~ 09:00</string>
    <string name="edit_price_staff">6,000원</string>
    <string name="edit_price_hs1">5,500원</string>


    <!--                  Label: login                  -->
    <string name="str_login_title">관리자 로그인</string>
    <string name="str_id">아이디</string>
    <string name="str_id_eng">ID</string>
    <string name="str_password">비밀번호</string>
    <string name="str_password_eng">password</string>
    <string name="str_login">로그인</string>


    <!--                  Label: admin                  -->
    <string name="str_monday">월요일</string>
    <string name="str_tuesday">화요일</string>
    <string name="str_wednesday">수요일</string>
    <string name="str_thursday">목요일</string>
    <string name="str_friday">금요일</string>
    <string name="str_open_time">고정 오픈 시간:</string>
    <string name="str_swung_dash">~</string>
    <string name="str_logout"><u>로그아웃 하기</u></string>
    <string name="str_today_date_and_time">1/2일 조식</string>
    <string name="str_early_closed">조기 마감하기</string>
    <string name="str_regist_week_menu">일주일 치 사진 등록</string>
    <string name="str_fine_tuning">세부 조정</string>
    <string name="str_change_open_time">운영 시간 변경</string>
    <string name="str_shoot">촬영하여 등록</string>
    <string name="str_breakfast">조식</string>
    <string name="str_lunch">중식</string>
    <string name="str_dinner">석식</string>
    <string name="str_save">저장</string>
    <string name="str_week">일주일</string>
    <string name="str_capture">촬영</string>
    <string name="str_regist_week_menu_text">일주일 치 보기</string>
    <string name="str_cancle">취소</string>
    <string name="str_chance_week">요일 변경</string>
    <string name="str_change_week">요일 변경</string>
    <string name="str_enter_menu">메뉴 입력</string>


    <!--                  Label: admin                  -->
    <string name="str_hs1_breakfast_open_time_start">08:00</string>
    <string name="str_hs1_breakfast_open_time_end">09:30</string>
    <string name="str_hs1_lunch_open_time_start">11:00</string>
    <string name="str_hs1_lunch_open_time_end">14:00</string>
    <string name="str_hs1_dinner_open_time_start">17:00</string>
    <string name="str_hs1_dinner_open_time_end">19:00</string>
    <string name="str_staff_lunch_open_time_start">11:00</string>
    <string name="str_staff_lunch_open_time_end">13:30</string>


    <!--                  Extention                  -->
    <string name="timePickerText">%1$s:%2$s</string>


    <!--                  Format                  -->
    <string name="todayDate">%1$s일 %2$s</string>
    <string name="dayOfWeek">%1$s (%2$s일)</string>
    <string name="timeTotime">%1$s ~ %2$s</string>

    <!--                  Description                  -->
    <string name="desc_sch_map">순천향대 학교 지도</string>
    <string name="desc_logo">Sooncheonhyang Cafeteria Manager Logo</string>
    <string name="desc_icon_today_menu">오늘의 학식 아이콘</string>
    <string name="desc_map_pin">지도 링크 아이콘</string>
    <string name="desc_detail_hs1_tab">향설 1관 메뉴 탭 바</string>
    <string name="desc_img_staff">교직원 식당 식단표 사진</string>
    <string name="desc_img_hs1">향설 1관 식단표 사진</string>
    <string name="desc_icon_other_cafeteria">누르면 다른 식당으로 전환할 수 있는 아이콘</string>
    <string name="desc_detail_staff_tab">교직원 식당 메뉴 탭 바</string>
    <string name="desc_iv_camera_capture">카메라로 촬영한 이미지를 미리볼 수 있는 뷰</string>
    <string name="desc_btn_cache_image">마지막 저장된 사진을 볼 수 있는 버튼</string>
</resources>