<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/txt_login_title"
        style="@style/AppTextTitle.30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/str_login_title"
        app:layout_constraintBottom_toTopOf="@id/txt_login_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_login_id"
        style="@style/AppTextTitle.15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/str_id"
        app:layout_constraintBottom_toTopOf="@id/edit_login_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_login_title" />

    <EditText
        android:id="@+id/edit_login_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:autofillHints="no"
        android:hint="@string/str_id_eng"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/txt_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txt_login_id"
        app:layout_constraintTop_toBottomOf="@id/txt_login_id"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/txt_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_password"
        app:layout_constraintBottom_toTopOf="@id/edit_login_password"
        app:layout_constraintStart_toStartOf="@id/txt_login_id"
        app:layout_constraintTop_toBottomOf="@id/edit_login_id" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/str_password_eng"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/btn_login_confirm"
        app:layout_constraintEnd_toEndOf="@id/edit_login_id"
        app:layout_constraintStart_toStartOf="@id/txt_login_id"
        app:layout_constraintTop_toBottomOf="@id/txt_login_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/blue_500"
        android:text="@string/str_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/txt_login_title"
        app:layout_constraintStart_toStartOf="@id/txt_login_title"
        app:layout_constraintTop_toBottomOf="@id/edit_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>