<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_detail_staff"
            style="@style/AppToolBar.ImageNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_staff" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/title_hs1"
                style="@style/AppTextTitle.30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_staff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_hs1" />

            <Space
                android:id="@+id/space_1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_1" />

            <TextView
                android:id="@+id/txt_operating_hours"
                style="@style/AppTextTitle.15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/str_operating_hours"
                app:layout_constraintEnd_toStartOf="@id/edit_operating_hours"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space_1" />

            <TextView
                android:id="@+id/edit_operating_hours"
                style="@style/AppTextBody.15sp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="70dp"
                android:text="@string/edit_operating_hours_staff"
                app:layout_constraintBottom_toBottomOf="@id/txt_operating_hours"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_operating_hours"
                app:layout_constraintTop_toTopOf="@id/txt_operating_hours" />

            <TextView
                android:id="@+id/txt_notice"
                style="@style/AppTextBody.15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="55dp"
                android:layout_marginTop="10dp"
                android:background="@color/red_10"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/str_notice"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/txt_operating_hours"
                app:layout_constraintStart_toStartOf="@id/txt_operating_hours"
                app:layout_constraintTop_toBottomOf="@id/txt_operating_hours" />

            <TextView
                android:id="@+id/txt_location"
                style="@style/AppTextTitle.15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/str_location"
                app:layout_constraintEnd_toStartOf="@id/edit_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_notice" />

            <TextView
                android:id="@+id/edit_location"
                style="@style/AppTextBody.15sp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="70dp"
                android:text="@string/edit_location"
                app:layout_constraintBottom_toBottomOf="@id/txt_location"
                app:layout_constraintEnd_toEndOf="@id/edit_operating_hours"
                app:layout_constraintStart_toStartOf="@id/edit_operating_hours"
                app:layout_constraintTop_toTopOf="@id/txt_location" />

            <ImageView
                android:id="@+id/btn_map_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/desc_map_pin"
                android:src="@drawable/ic_map_pin"
                app:layout_constraintBottom_toBottomOf="@id/edit_location"
                app:layout_constraintStart_toEndOf="@id/edit_location"
                app:layout_constraintTop_toTopOf="@id/edit_location" />

            <TextView
                android:id="@+id/txt_price"
                style="@style/AppTextTitle.15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/str_price"
                app:layout_constraintEnd_toStartOf="@id/edit_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_location" />

            <TextView
                android:id="@+id/edit_price"
                style="@style/AppTextBody.15sp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="70dp"
                android:text="@string/edit_price_staff"
                app:layout_constraintBottom_toBottomOf="@id/txt_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_price"
                app:layout_constraintTop_toTopOf="@id/txt_price" />

            <View
                android:id="@+id/line_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_price" />

            <Space
                android:id="@+id/space_2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_2" />

            <ProgressBar
                android:id="@+id/prograssbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>