<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_admin_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="관리자 유형을 선택하세요"
        app:layout_constraintBottom_toTopOf="@id/btn_to_admin1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        style="@style/AppTextTitle.23sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_admin1"
        android:layout_width="0dp"
        style="@style/AppTextBody.20sp"
        android:layout_marginHorizontal="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/str_total_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue_100"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/btn_to_admin2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_admin2"
        android:layout_width="0dp"
        style="@style/AppTextBody.20sp"
        android:layout_height="wrap_content"
        android:text="@string/str_hs1"
        app:layout_constraintStart_toStartOf="@id/btn_to_admin1"
        app:layout_constraintEnd_toEndOf="@id/btn_to_admin1"
        android:background="@color/red_100"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_to_admin1"
        app:layout_constraintBottom_toTopOf="@id/btn_to_admin3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_admin3"
        android:layout_width="0dp"
        android:text="@string/str_staff"
        android:layout_height="wrap_content"
        style="@style/AppTextBody.20sp"
        app:layout_constraintStart_toStartOf="@id/btn_to_admin1"
        app:layout_constraintEnd_toEndOf="@id/btn_to_admin1"
        android:background="@color/yellow_100"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_to_admin2"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_master"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/grey_300"
        app:layout_constraintTop_toBottomOf="@id/btn_to_admin3"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>