<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_camera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparency"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.camera.view.PreviewView
        android:id="@+id/view_camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_camera"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_iv_camera_capture"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/btn_photo_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_camera"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_photo_capture"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/str_capture"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_photo_cancel"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_300"
        android:focusable="false"
        android:text="@string/str_cancle"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/btn_photo_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_photo_capture" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_photo_save"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_400"
        android:focusable="false"
        android:text="@string/str_save"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/btn_photo_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_photo_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_photo_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>